--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <span class="s3"></span>
             <ul>
                 <li>
-                    <p>저는 <strong>악어같은</strong> 오나영입니다. <br>
+                    <p>저는 <strong>악어같은</strong> 오나영입니다. <br><br>
                     악어는 한 번 물면 포기하지 않는 근성을 지녔는데 <br>
                     저도 마찬가지로 하고자 하는 일이 있으면 될 거라는 믿음 하나로 끝까지 하고자 합니다.</p>
                 </li>
