--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <section id="main">
             <div class="main">
-                <p>OH NAAA YOUNG <br>
+                <p>OH NAAddddddd YOUNG <br>
                     PORTFOLIO</p>
             </div>
             <div class="main_modal">
