--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <header>
             <div class="logo">
-                <a href="#"><img src="./img/logo2.png" alt="logo" width="150"></a>
+                <a href="#main"><img src="./img/logo2.png" alt="logo" width="150"></a>
                 <span></span>
             </div>
             <nav>
@@ -323,7 +323,7 @@
 
         <footer>
             <div class="logo2">
-                <a href="#"><img src="./img/logo2.png" alt="logo" width="150"></a>
+                <a href="#main"><img src="./img/logo2.png" alt="logo" width="150"></a>
                 <span></span>
             </div>
             <ul>
@@ -332,7 +332,6 @@
                 <li>Velog : nyoungs117.velog</li>
             </ul>
         </footer>
-    
     
     </div>
     <button id="topBtn">TOP</button>
